--- a/gb/24/1/26/n14167386.md
+++ b/gb/24/1/26/n14167386.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>王友群：中共党魁又被传出病重“谣言”？</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/01/id14167390-000_1EI469-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2024年01月27日讯】关于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E9%AD%81.md#1">中共党魁</a>习近平<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%97%85%E9%87%8D.md#1">病重</a>的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B0%A3%E8%A8%80.md#1">谣言</a>”，已传出很多了。昨天，又一则关于习罹患胰腺癌的消息在网上广传，到现在已有116万人点击观看。已有不少人就此发表评论。这里，我也来谈一谈我的看法。</p>
-<h2><strong>最新的“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B0%A3%E8%A8%80.md#1">谣言</a>”</strong></h2>
-<p>1月25日，海外社交媒体X账号@IngWeilai发贴文说：网传习近平可能得了胰腺癌，不能确定真假。重点可以关注习近平多久不现身。如果真的是胰腺癌，神仙来了都没救，也就半年到一年的命。</p>
-<p>该贴文所配图片内容显示：一名ID为“北京护士”的人发帖称，她的一位非常要好的同学朋友告诉她，习近平因为<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E7%98%A6.md#1">消瘦</a>体征，301医疗团队给做了pet-ct，发现胰腺有阴影，可能是胰腺癌。</p>
+	<p>【大纪元2024年01月27日讯】关于中共党魁习近平病重的“谣言”，已传出很多了。昨天，又一则关于习罹患胰腺癌的消息在网上广传，到现在已有116万人点击观看。已有不少人就此发表评论。这里，我也来谈一谈我的看法。</p>
+<h2><strong>最新的“谣言”</strong></h2>
+<p>1月25日，海外社交媒体X账号@IngWeilai发帖文说：网传习近平可能得了胰腺癌，不能确定真假。重点可以关注习近平多久不现身。如果真的是胰腺癌，神仙来了都没救，也就半年到一年的命。</p>
+<p>该帖文所配图片内容显示：一名ID为“北京护士”的人发帖称，她的一位非常要好的同学朋友告诉她，习近平因为消瘦体征，301医疗团队给做了pet-ct，发现胰腺有阴影，可能是胰腺癌。</p>
 <h2><strong>三点评论</strong></h2>
-<h3><strong>第一，从近期习公开露面的视频看，习确实<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%88%E7%98%A6.md#1">消瘦</a>很多。</strong></h3>
+<h3><strong>第一，从近期习公开露面的视频看，习确实消瘦很多。</strong></h3>
 <p>1月17日，习在八宝山出席台盟中央前主席张克辉的告别式。从央视的视频看，习面容憔悴，明显比以前消瘦，西服松垮。</p>
 <p>1月24日，习迎接到访的乌兹别克斯坦总统并与之会谈。从央视的视频看，习不仅消瘦，且面无神采，显得疲惫。</p>
 <p>去年11月15日，习与美国总统拜登在旧金山会晤时，习的大肚子可以看得很清楚。但上述两次习的公开活动中，习的大肚子似乎小了不少。</p>
@@ -21,66 +21,62 @@
 <p>2022年5月，英国《每日邮报》曾披露，习疑似患有“脑动脉瘤”，但他不愿动手术，希望透过其它方式治疗。报导还说，2021年底，据传习曾因“脑出血”被紧急送往医院治疗。</p>
 <h3><strong>第三，习的身体出状况应在意料之中。</strong></h3>
 <p>虽然习说他当知青时扛200斤麦子走十里山路不换肩，身体非常好，但是，今天习扛在肩上的，可不是200斤重的麦子，而是“四座大山”——毛泽东时代、邓小平时代、江泽民时代遗留下来的所有问题，以及习当政11年来积累下的所有问题。任凭习如何逞强，这“四座大山”，他是扛不动的。</p>
-<p>习的第一任期、第二任期，一直在跟前<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%85%9A%E9%AD%81.md#1">中共党魁</a>江泽民斗，抓了江提拔重用的一批党、政、军高官。这些高官及其家属、子女、后台，个个对习恨之入骨，必欲除之而后快。但是，2022年11月30日江病亡后，习竟然在悼词中吹捧无德无能臭名昭著的江是“伟大的无产阶级革命家、政治家、军事家、外交家”。</p>
+<p>习的第一任期、第二任期，一直在跟前中共党魁江泽民斗，抓了江提拔重用的一批党、政、军高官。这些高官及其家属、子女、后台，个个对习恨之入骨，必欲除之而后快。但是，2022年11月30日江病亡后，习竟然在悼词中吹捧无德无能臭名昭著的江是“伟大的无产阶级革命家、政治家、军事家、外交家”。</p>
 <p>习江斗时，习一直在“啪、啪、啪”地打江的脸。一转眼，习又把江干的所有大坏事承接过来了。江是个什么东西？当代中共党政军最高层最严重腐败分子的总后台，当代中国乃至当今世界最大的卖国贼，以大规模活摘法轮功学员器官杀人的罪魁祸首。仅仅是江的这三大罪，习承受得了吗？承受不了！</p>
 <p>习拼尽全身力气搞“三连任”，将所有异己力量排除在最高权力圈子之外，将中共高层的几乎所有政治派别，如元老派、共青团派、太子党、改革开放派、军队众多高级将领等，几乎都得罪光了。这些人都盼着习出大事。</p>
-<p>虽然习千方百计防<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%94%BF%E5%8F%98.md#1">政变</a>、防兵变、防暗杀，但是，习树敌太多，防不胜防。习的神经每天都紧绷着，身体能不出状况吗？</p>
-<p>习“三连任”后的一年多，诸事不顺。习亲自提拔重用的最年轻的党和国家领导人，前国务委员、外交部长秦刚，背叛了他；习亲自提拔重用的党的、军队的、国家的领导人，前中央军委委员、国务委员、国防部长李尚福，背叛了他；习亲自提拔重用的火箭军的司令员、政委、副司令员、参谋长等，都背叛了他；习亲自提拔重用的军委装备发展部的诸多将领，都背叛了他……。</p>
+<p>虽然习千方百计防政变、防兵变、防暗杀，但是，习树敌太多，防不胜防。习的神经每天都紧绷着，身体能不出状况吗？</p>
+<p>习“三连任”后的一年多，诸事不顺。习亲自提拔重用的最年轻的党和国家领导人，前国务委员、外交部长秦刚，背叛了他；习亲自提拔重用的党的、军队的、国家的领导人，前中央军委委员、国务委员、国防部长李尚福，背叛了他；习亲自提拔重用的火箭军的司令员、政委、副司令员、参谋长等，都背叛了他；习亲自提拔重用的军委装备发展部的诸多将领，都背叛了他??</p>
 <p>这一连串的背叛，全都像钢针插到习的心头上，习能不忧心重重吗？</p>
-<p>习亲自抓金融，中共股市一直跌跌不休，一直跌破2800点；习亲自抓香港，短短四年间，曾经的“世界第三大金融中心”，蜕变为“世界金融中心遗址”；习亲自抓台湾，台湾大选结果与习的期望完全相反；习对台湾“极限施压”，全世界却有100多个国家的1400多名政要祝贺台湾大选；习亲自抓外交，中共在国际上敌越树越多，越来越孤立。</p>
+<p>习亲自抓金融，中共股市一直跌跌不休，一直跌破2800点；习亲自抓香港，短短四年间，曾经的“世界第三大金融中心”，蜕变为“世界金融中心遗址”；习亲自抓台湾，台湾大选结果与习的期望完全相反；习对台湾“极限施压”，全世界却有一百多个国家的逾1400名政要祝贺台湾大选；习亲自抓外交，中共在国际上敌越树越多，越来越孤立。</p>
 <p>习亲访所谓“同志加兄弟”的越南，躬身给越共中央总书记阮富仲敬酒时，阮没有起身还礼，而是坐在座位上，跟习碰了一下杯，转身就跟旁边的人说话去了。</p>
-<p>习亲自抓病毒“清零不动摇”三年，病毒不仅没有被清零，相反感染无数，令无数人人死亡，且病毒一直在中国大陆徘徊。现在，又出现疫情高峰。从北京到全国各地，医院人满为患，死者日众。</p>
+<p>习亲自抓病毒“清零不动摇”三年，病毒不仅没有被清零，相反感染无数，令无数人死亡，且病毒一直在中国大陆徘徊。现在，又出现疫情高峰。从北京到全国各地，医院人满为患，死者日众。</p>
 <p>放眼全中国，极目全世界，中共内政外交没有一件顺心事，习的身心能顺吗？</p>
 <p>习登上权力之巅，希望赢得尊敬，收获的却是骂声遍全球。</p>
 <p>去年10月25日，中共国务院发布的2024年节假日安排通知中，大年三十的除夕却不放假，引起人们的惊异和不满。很多人猜测不放假的原因，可能是“除夕”与“除习”谐音。海内外不少人发出过“除夕节”倡议，如互相转发“除恶习，过新年”等。</p>
 <p>这些倡议，或许习听不到、看不到，但是，这无数人发出的共同心声，产生的共振效应，也是巨大的能量，一起涌向中南海。习能不郁闷吗？</p>
 <p>从中共二十大前彭立发在北京四通桥上打出“罢免习近平”的横幅，到一个月后的白纸运动席卷全国，上海有人公开喊出“习近平下台”，再到几个月后济南万达广场的北墙上，出现“打倒习近平”的红底白字电子条幅。中国民众反习浪潮一波接一波。这汹涌的民怨从四面八方汇聚到中南海，习能不提心吊胆吗？</p>
-<p>财新网上一篇接一篇针对习把内政外交都搞砸了的文章——《改革亟须新突破》、《重温实事求是思想路线》、《2023终有一别》、《嫌疑人孙任泽之死》，虽然都被删除了，但是，新闻界、学术界、律师界、高等院校知识精英对习的不满删除不掉。这作用力与反作用力的反复较量，习能不心力交瘁吗？</p>
+<p>财新网上一篇接一篇针对习把内政外交都搞砸了的文章——《改革亟须新突破》《重温实事求是思想路线》《2023终有一别》《嫌疑人孙任泽之死》，虽然都被删除了，但是，新闻界、学术界、律师界、高等院校知识精英对习的不满删除不掉。这作用力与反作用力的反复较量，习能不心力交瘁吗？</p>
 <p>2023年，中共党政军高官发生一系列离奇死亡事件，如退休仅七个月的前中共政治局常委、国务院总理李克强离奇死亡，前中共火箭军副司令员吴国华突然上吊自杀，前中央警卫局局长王少军离奇死亡等。</p>
 <p>网上曾盛传，“习下李上”，如今李走了，习呢？这些高官离奇死亡的阴影，笼罩在习的心头，习能不愁容满面吗？</p>
 <p>还有一条，中共建政后的历任党魁中，习可能是最怕死的一个。习上台12年来，在中国大陆，无论哪里发生重大天灾人祸，习从来没有在第一时间赶到现场，看望、慰问灾民，总是躲得远远的，生怕危及自身性命安全。</p>
 <p>习超级怕死的念头，能不给习招来麻烦吗？</p>
 <h2><strong>结语</strong></h2>
-<p>英国预言家克雷格－汉密尔顿－帕克，曾准确预言川普当选、香港反送中大游行、2019年英国首相特蕾莎·梅下台、约翰逊继任、英国脱欧、2020年病毒大流行、英国伊丽莎白女王去世、俄乌战争等。</p>
+<p>英国预言家克雷格-汉密尔顿-帕克，曾准确预言川普当选、香港反送中大游行、2019年英国首相特蕾莎·梅下台、约翰逊继任、英国脱欧、2020年病毒大流行、英国伊丽莎白女王去世、俄乌战争等。</p>
 <p>去年11月3日，帕克预言2024年的大事时说，习近平将得重病，被掩盖，但会导致“第二次革命”，进而共产党分裂，发生动乱，习下台，但他并没有死去。</p>
 <p>习会不会如上述“谣言”说的那样得重病，或者像帕克预言的那样得重病，还有待观察。而习的身体出状况应在预料之中。</p>
 <p>目前唯一可以肯定的是，2024年，习有大麻烦。</p>
 <p>大纪元首发</p>
-<p>责任编辑：高义</p>
+<p>责任编辑：高义#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147231.md#1">王友群：中共军方反习的人很多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/2/n14149879.md#1">王友群：打掉改革开放派 或致物极必反</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/12/n14156273.md#1">王友群：中纪委全会为何未提秦刚、李尚福等？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163556.md#1">王友群：为何有一百多国政要祝贺台湾大选？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165769.md#1">这种杯子为何如此火爆 加州女子偷65个被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">更新：亚马逊农历新年装饰 喜庆满溢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/30/n14147231.md#1">王友群：中共军方反习的人很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/2/n14149879.md#1">王友群：打掉改革开放派 或致物极必反</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/12/n14156273.md#1">王友群：中纪委全会为何未提秦刚、李尚福等？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/1/21/n14163556.md#1">王友群：为何有一百多国政要祝贺台湾大选？</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/14/n11257087.md#1" target="_blank">【征文】凌晓辉：贞洁论（三）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/22/n11133337.md#1" target="_blank">林辉：质疑文革 红卫兵头目被摘肾暴尸</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162748.md#1">考试作文如何获得高分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143327.md#1">【古道人生】女侠盗去知府项珠 知府取回后吓得面如土色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/22/n14164268.md#1">【未解之谜】跨越30多年的“友情”原来外星人要这个（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/22/n14164141.md#1">黄历十二月为何称为“腊月”？“腊”展现什么文化内涵？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/21/n14163222.md#1">迷恋言情剧 后果很严重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167219.md#1">【十字路口】北京传习患重病 亡党预言正兑现？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/25/n14166654.md#1">【未解之谜】跨越30多年的“友情”原来外星人要这个（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/26/n14166791.md#1">【新闻大家谈】翻墙被抓 小粉红变身“反贼”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165312.md#1">大陆地方GDP“放卫星” 专家：自酿苦果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165530.md#1">岳山：令中共党魁不安的特殊“落马”名单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165581.md#1">中共央行再放水 罕见宣布降息降准 外界解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/25/n14166587.md#1">英钢琴家战小粉红后续 疑港男弹奏《愿荣光》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165851.md#1">电影版《花千骨》翻车 4天票房仅505万元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165812.md#1">两年前曾被传再嫁高官 佟丽娅名誉案一审宣判</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/24/n14165901.md#1">A股大跌 大陆女星江疏影投资雪球产品爆仓？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/25/n14166630.md#1">张卫健演唱会彩排爆意外 钢琴空中旋转砸身上</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/18/n14161353.md#1">清洁马桶用它易中毒 家事达人教你安全方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">Allnice 48件中国结吊坠55%折扣 带给您浓浓的年味儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/20/n14162339.md#1">咖啡怎么喝更胜一筹？台湾名教授：加1物功效翻倍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/25/n14166254.md#1">为何旅游时不要在网上即时分享照片？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/1/23/n14164858.md#1">为什么猫会打翻东西？你需要的猫咪读心术</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/5/n14284473.md#1">老僧预言他将大祸临头 权倾天下的他将如何选择？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/8/n14286164.md#1">【未解之谜】最可信的穿越者 他在历史中留下了证据</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289654.md#1">【音乐】五月的希望</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/7/n14285490.md#1">故宫耐震神技夸世 建筑秘诀藏在何处？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289728.md#1">【未解之谜】“目睹”三次文明毁灭 濒死中看到未来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289636.md#1">【中国禁闻】揭油罐车黑幕 记者韩福涛据传失联</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290106.md#1">【时事军事】共军真要去欧洲打仗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289717.md#1">衡阳保卫战电影被禁 分析：中共抹杀历史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289299.md#1">中国6月进出口数据现警讯 贸易冲突或加剧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289679.md#1">2024年美国生活最昂贵和最便宜的十个州</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290122.md#1">演唱会中途不停要喝水 刘德华身体状况引担忧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/11/n14288874.md#1">胡歌首谈夫妻相处模式 大赞老婆付出很多</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289693.md#1">力压张若昀和胡歌 朱一龙获陆剧小生演技冠军</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/13/n14290096.md#1">油管史上第一人 网红MrBeast频道订阅数破3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289755.md#1">张艺兴演唱会上为母亲庆生 一口误引全场笑声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/14/n14290376.md#1">美国癌症协会：4成癌症病例与生活习惯有关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/10/n14287768.md#1">物价上涨如何省钱？养成19个购物习惯超实用</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/6/n14285229.md#1">研究：咖啡有助于抵消与年龄有关的肌肉流失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/1/n14281710.md#1">吸食大麻健康危害大 七招让你远离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/12/n14289225.md#1">观赏奥运要小心 看错比赛肚子恐怕会胖一圈</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/1/26/n14167386.htm">王友群：中共党魁又被传出病重“谣言”？</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/24/1/26/n14167386.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://cn.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://cn.epochtimes.com/gb/24/1/26/n14167386.htm">王友群：中共党魁又被传出病重“谣言”？</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/1/26/n14167386.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
